// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Component Fixture > Approximate Mode > should match snapshot in approximate mode 1`] = `
{
  "baseClasses": [
    "bg-blue-500",
    "border",
    "border-transparent",
    "cursor-pointer",
    "duration-200",
    "font-medium",
    "inline-flex",
    "items-center",
    "justify-center",
    "leading-5",
    "md:px-6",
    "md:py-3",
    "md:text-base",
    "px-4",
    "py-2",
    "rounded-md",
    "text-sm",
    "text-white",
    "transition-all",
  ],
  "coverage": {
    "categories": {
      "background": {
        "matched": 0,
        "percentage": 0,
        "total": 0,
      },
      "border": {
        "matched": 2,
        "percentage": 100,
        "total": 2,
      },
      "color": {
        "matched": 2,
        "percentage": 100,
        "total": 2,
      },
      "effects": {
        "matched": 1,
        "percentage": 100,
        "total": 1,
      },
      "flex-grid": {
        "matched": 0,
        "percentage": 0,
        "total": 0,
      },
      "layout": {
        "matched": 1,
        "percentage": 100,
        "total": 1,
      },
      "other": {
        "matched": 3,
        "percentage": 100,
        "total": 3,
      },
      "sizing": {
        "matched": 0,
        "percentage": 0,
        "total": 0,
      },
      "spacing": {
        "matched": 2,
        "percentage": 100,
        "total": 2,
      },
      "typography": {
        "matched": 4,
        "percentage": 100,
        "total": 4,
      },
    },
    "matched": 15,
    "nonArbitrary": 19,
    "percentage": 100,
    "total": 15,
  },
  "selectors": [
    ".button",
    ".button:hover",
    ".button:focus",
    ".button:active",
    ".button:disabled",
  ],
}
`;

exports[`Button Component Fixture > Strict Mode > should match snapshot in strict mode 1`] = `
{
  "baseClasses": [
    "bg-blue-500",
    "border",
    "border-transparent",
    "cursor-pointer",
    "duration-200",
    "font-medium",
    "inline-flex",
    "items-center",
    "justify-center",
    "leading-5",
    "md:px-6",
    "md:py-3",
    "md:text-base",
    "px-4",
    "py-2",
    "rounded-md",
    "text-sm",
    "text-white",
    "transition-all",
  ],
  "coverage": {
    "categories": {
      "background": {
        "matched": 0,
        "percentage": 0,
        "total": 0,
      },
      "border": {
        "matched": 2,
        "percentage": 100,
        "total": 2,
      },
      "color": {
        "matched": 2,
        "percentage": 100,
        "total": 2,
      },
      "effects": {
        "matched": 1,
        "percentage": 100,
        "total": 1,
      },
      "flex-grid": {
        "matched": 0,
        "percentage": 0,
        "total": 0,
      },
      "layout": {
        "matched": 1,
        "percentage": 100,
        "total": 1,
      },
      "other": {
        "matched": 3,
        "percentage": 100,
        "total": 3,
      },
      "sizing": {
        "matched": 0,
        "percentage": 0,
        "total": 0,
      },
      "spacing": {
        "matched": 2,
        "percentage": 100,
        "total": 2,
      },
      "typography": {
        "matched": 4,
        "percentage": 100,
        "total": 4,
      },
    },
    "matched": 15,
    "nonArbitrary": 19,
    "percentage": 100,
    "total": 15,
  },
  "focusClasses": [
    "focus:[outline-offset:2px]",
    "focus:[outline:2px solid transparent]",
    "focus:shadow-[0 0 0 3px rgba(59, 130, 246, 0.5)]",
  ],
  "hoverClasses": [
    "hover:bg-blue-600",
    "hover:shadow-[0 4px 6px -1px rgba(0, 0, 0, 0.1)]",
    "hover:translate-y-[-1px]",
  ],
  "selectors": [
    ".button",
    ".button:hover",
    ".button:focus",
    ".button:active",
    ".button:disabled",
  ],
}
`;
